# rez-packages

./: .gitignore  README.md
doc/: README.chs.md
libs/assimp/5.1.3/: CMakeLists.txt  package.py
libs/assimp/5.1.3/cmake/: FindASSIMP.cmake
libs/assimp/5.2.5/: CMakeLists.txt  package.py
libs/boost/1.73/: CMakeLists.txt  package.py
libs/boost/1.73.0/: CMakeLists.txt  package.py
libs/boost/1.80.0/: CMakeLists.txt  package.py
libs/catch2/2.13.7/: CMakeLists.txt  package.py
libs/catch2/3.3.0/: CMakeLists.txt  package.py
libs/eigen/3.4.0/: CMakeLists.txt  package.py
libs/embree/3.13.0/: CMakeLists.txt  package.py
libs/embree/3.13.5/: CMakeLists.txt  package.py
libs/enoki/0.1.0/: CMakeLists.txt  package.py
libs/expat/2.2.8/: CMakeLists.txt  package.py
libs/expat/2.5.0/: CMakeLists.txt  package.py
libs/fmt/8.0.1/: CMakeLists.txt  package.py
libs/frozen/1.0.1/: CMakeLists.txt  package.py
libs/frozen/1.1.2/: CMakeLists.txt  package.py
libs/gbenchmark/1.6.1/: CMakeLists.txt  package.py
libs/gettext/0.21/: CMakeLists.txt  package.py
libs/gif/4.2.2/: CMakeLists.txt  gif.patch  package.py
libs/gif/5.2.1/: CMakeLists.txt  gif.patch  package.py
libs/glfw/3.3.4/: CMakeLists.txt  package.py
libs/glm/0.9.9.8/: CMakeLists.txt  package.py
libs/imath/3.1.5/: CMakeLists.txt  package.py
libs/jpeg/2.1.0/: CMakeLists.txt  package.py
libs/llvm/13.0.1/: CMakeLists.txt  package.py
libs/llvm/15.0.6/: CMakeLists.txt  package.py
libs/minizip/3.0.7/: CMakeLists.txt  package.py
libs/ocio/2.0.1/: CMakeLists.txt  package.py
libs/ocio/2.1.2/: package.py
libs/ocio/2.2.0/: CMakeLists.txt  ocio.patch  package.py
libs/oiio/2.2.15/: CMakeLists.txt  oiio.patch  package.py
libs/oiio/2.4.6/: CMakeLists.txt  package.py
libs/openexr/2.4.3/: CMakeLists.txt  package.py
libs/openexr/3.1.5/: CMakeLists.txt  package.py
libs/openjpeg/2.4.0/: CMakeLists.txt  package.py
libs/openssl/1.1.1/: CMakeLists.txt  build.py  package.py
libs/opensubdiv/3.5.0/: CMakeLists.txt  package.py
libs/openvdb/10.0.1/: CMakeLists.txt  package.py
libs/osl/1.11.14/: CMakeLists.txt  package.py
libs/osl/1.11.17/: CMakeLists.txt  package.py
libs/osl/1.12.7.1/: CMakeLists.txt  package.py
libs/osl_debug/1.11.14/: CMakeLists.txt  package.py
libs/osl_debug/1.11.17/: CMakeLists.txt  package.py
libs/pcg32/1.0.1/: CMakeLists.txt  package.py
libs/png/1.6.37/: CMakeLists.txt  package.py
libs/pugixml/1.11.4/: CMakeLists.txt  package.py
libs/pybind11/2.10.1/: CMakeLists.txt  package.py
libs/pybind11/2.6.2/: CMakeLists.txt  package.py
libs/pystring/1.1.3/: CMakeLists.txt  package.py  pystring.patch
libs/raw/0.21.1/: CMakeLists.txt  package.py
libs/spirvcross/2021.1.15/: CMakeLists.txt  package.py
libs/sqlite/3.39.4/: CMakeLists.txt  package.py
libs/tbb/2020.2/: CMakeLists.txt  package.py
libs/tbb/2020.3/: CMakeLists.txt  package.py
libs/tbb/2021.2.0/: CMakeLists.txt  package.py
libs/tbb/2021.8.0/: CMakeLists.txt  package.py
libs/tiff/4.3.0/: CMakeLists.txt  package.py
libs/yamlcpp/0.6.3/: CMakeLists.txt  package.py
libs/yamlcpp/0.7.0/: CMakeLists.txt  package.py
libs/zlib/1.2.11/: CMakeLists.txt  package.py
softwares/cmake/3.20.4/: CMakeLists.txt  package.py
softwares/cmake/3.25.1/: CMakeLists.txt  build.py  package.py
softwares/gcc/12.3.0/: CMakeLists.txt  package.py
softwares/python/2.7.18/: CMakeLists.txt  package.py
softwares/python/3.10.9/: CMakeLists.txt  package.py
softwares/python/3.7.10/: CMakeLists.txt  package.py  python.patch
softwares/python/3.7.13/: CMakeLists.txt  package.py  python.patch
softwares/winenv/0.0.1/: build.py  package.py
suites/kazen_dev/2021/: CMakeLists.txt  package.py
suites/vfx_reference_platform/2021/: package.py
